SERVER-37284 Do not log/profile ndeleted when the number of deleted documents is not known